--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,12 @@
 name = "wgtr-scene-manager"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Wiktor Janecki", "j.wiktor05@interia.pl"]
+readme = "README.md"
+repository = "https://github.com/wiktorjanecki/wgtr-scene-manager"
+homepage = "https://github.com/wiktorjanecki/wgtr-scene-manager"
+description = """
+Simple scene manager with easy to understand functions
+"""
 
 [dependencies]
